# Proyecto-Recetas

./: README.md  init_db.py  pyproject.toml
src/segundoparcialpw/: __init__.py  forms.py  models.py  run.py
src/segundoparcialpw/static/: base_style.css
src/segundoparcialpw/templates/: Reseta_view.html  base.html  index.html
src/segundoparcialpw/templates/admin/: reseta_form.html  signup_form.html
